--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://jdoshi2.github.io/Personal_Portfolio",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.487.0",
     "maath": "^0.5.2",
     "react": "^18.2.0",
