Fix trailing slash in homepage URL in package.json for consistency

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jaydoshi2.github.io/Personal_Portfolio",
+  "homepage": "https://jaydoshi2.github.io/Personal_Portfolio/",
   "name": "3dfolio",
   "private": true,
   "version": "0.0.0",
